kubernetes/monitoring/test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: prometheus.e8c78187f8d844399c4d.southeastasia.aksapp.io
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 80
